cancel register for the event - FINISHED