@@ -42,15 +42,15 @@ public class EventParticipationServiceTest {
 
     @Test
     public void unregisterParticipantTest() {
-        Mockito.when(eventParticipationRepository.findAllParticipantsByEventId(1L)).thenReturn(Collections.emptyList());
+        User user = User.builder().id(1L).username("name").build();
+        Mockito.when(eventParticipationRepository.findAllParticipantsByEventId(1L)).thenReturn(List.of(user));
         eventParticipationService.unregisterParticipant(1L, 1L);
+        Mockito.verify(eventParticipationRepository).unregister(1L, 1L);
     }
 
     @Test
     public void unregisterParticipantThrowExceptionTest() {
-        User user = User.builder().id(1L).username("test").build();
-        Mockito.when(eventParticipationRepository.findAllParticipantsByEventId(1L)).thenReturn(List.of(user));
         assertThrows(DataValidationException.class,
-                () -> eventParticipationService.unregisterParticipant(1L, 10L));
+                () -> eventParticipationService.unregisterParticipant(1L, 2L));
     }
 }
